@startuml
!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>

' Zero or One	|o--
' Exactly One	||--
' Zero or Many	}o--
' One or Many	}|--

'tabela de facto
table( Vendas ) {
    foreign_key(primary_key( codCliente )): INTEGER
    foreign_key(primary_key( codProduto )): INTEGER
    foreign_key(primary_key( codTempo )): INTEGER
    column( vendasMilharesEuros ): INTEGER
}
'tabela de facto
table( Producoes ) {
    foreign_key(primary_key( codProduto )): INTEGER
    foreign_key(primary_key( codSetorAgricola )): INTEGER
    foreign_key(primary_key( codTempo )): INTEGER
    column( producaoToneladas ): INTEGER
}
'tabela de dimensão
table( Produto ) {
    primary_key( codProduto ): INTEGER
    foreign_key( codCultura ): INTEGER
    column( designacaoProduto ): VARCHAR
}

table( SetorAgricola ) {
    primary_key( codSetorAgricola ): INTEGER
    column( designacaoSetorAgricola ): VARCHAR
}

table( Cliente ) {
     primary_key( codInterno ): INTEGER
     column( nome ): VARCHAR
     column( emailCliente ): VARCHAR
     column( nrFiscal ): INTEGER
}

table( Cultura ) {
    primary_key( codCultura ): INTEGER
    column( designacaoCultura ): VARCHAR
    column( tipoCultura ): VARCHAR
}

table( SetorAgricola_Cultura ) {
    foreign_key(primary_key( codSetorAgricola )): INTEGER
    foreign_key(primary_key( codCultura )): INTEGER
}
'tabela de dimensão
table( Tempo ) {
    primary_key( codTempo ): INTEGER
    column( ano ): INTEGER
    column( mes ): INTEGER
}

Vendas }|--|| Cliente
'múltiplas vendas para um cliente
Vendas }|--|| Produto
'múltiplas vendas com um produto
Producoes }|--|| Produto
'múltiplas produções com um produto
Producoes }|--|| SetorAgricola
'múltiplas produções com um setor agrícola
Vendas }|--|| Tempo
'múltiplas vendas num tempo
Producoes }|--|| Tempo
'múltiplas produções num tempo
Produto }|--|| Cultura
'múltiplos produtos pertencentes a uma cultura
Cultura ||--|{ SetorAgricola_Cultura
'múltiplas culturas pertencentes a um setor agrícola
SetorAgricola_Cultura }|--|| SetorAgricola
'múltiplos setores agrícolas com uma cultura

@enduml